<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOGIN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="fade">FADE IN</string>

</resources>
