<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="6dp"
                android:textColorHint="#5F6063"
                android:textColor="#1B1E1F"
                android:background="@android:color/transparent"
                android:hint="@string/email_hint" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:alpha="1.0"
                android:background="@drawable/line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="6dp"
                android:textColorHint="#5F6063"
                android:textColor="#1B1E1F"
                android:background="@android:color/transparent"
                android:hint="@string/password_hint"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:alpha="1.0"
                android:background="@drawable/line" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/blue_button"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>